Make Lookout jobset cancellation go via Lookout server
